--- a/views/user/shoppingCart.ejs
+++ b/views/user/shoppingCart.ejs
@@ -24,6 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.7/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -175,17 +176,6 @@
                 </div>
         </section>
 
-        <%- include("../../views/partials/user/footer") %>
-
-            <div class="search-model">
-                <div class="h-100 d-flex align-items-center justify-content-center">
-                    <div class="search-close-switch">+</div>
-                    <form class="search-model-form">
-                        <input type="text" id="search-input" placeholder="Search here.....">
-                    </form>
-                </div>
-            </div>
-            <!-- Shopping Cart Section End -->
 
             <!-- Footer Section Begin -->
             <%- include("../../views/partials/user/footer") %>
@@ -505,8 +495,7 @@
 
                                 if (response.ok) {
 
-                                    Swal.fire('Removed!', 'The item has been removed from your cart.', 'success');
-
+                                 
                                    window.location.reload()
                                     const itemRow = document.getElementById(`row-${itemId}`);
                                     if (itemRow) {
